More divs, more classes
Separates the inner middle paragraphs

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </section>
       <section id="one-middle" class="middle">
         <h3>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h3>
+          <div class="innerParagraphGroup">
         <p>
           Unwrap toilet paper murr i hate humans they are so annoying. Pet me pet me pet me pet me, bite, scratch, why are you petting me stare at ceiling light. Love spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce and attack like a vicious monster or wake up human for food at 4am for has closed eyes but still sees you. Purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table show belly, cat sit like bread or i just saw other cats inside the house and nobody ask me before using my litter box yet purr but rub face on everything. Purrrrrr.               
         </p>
@@ -65,6 +66,7 @@
         <p>
           Munch, munch, chomp, chomp. I like fish if it smells like fish eat as much as you wish eat the fat cats food. This cat happen now, it was too purr-fect!!!. Please stop looking at your phone and pet me meow meow, i tell my human. Scratch leg; meow for can opener to feed me ears back wide eyed so it's 3am, time to create some chaos . Tuxedo cats always looking dapper pretend you want to go out but then don't touch my tail, i shred your hand purrrr decide to want nothing to do with my owner today. And sometimes switches in french and say "miaou" just because well why not hey! you there, with the hands. 
         </p>
+              </div>
       </section>
       <section id="one-end" class="end">
         <h3>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</h3>
@@ -95,6 +97,7 @@
       </section>
       <section id="two-middle" class="middle">
         <h3>Chuck landjaeger flank filet mignon pig</h3>
+          <div class="innerParagraphGroup">
         <p>
           Halvah bear claw cheesecake sesame snaps lollipop pastry marzipan. Biscuit pie sesame snaps chocolate cake chupa chups soufflé. Tart fruitcake jujubes. Jelly chocolate bar lollipop donut ice cream chupa chups lemon drops biscuit marzipan. Pudding candy sweet roll pastry candy. Gummies soufflé pastry lemon drops bonbon. Gingerbread chupa chups danish jelly beans jujubes gummies. Candy pie candy canes bear claw dessert. Brownie halvah donut caramels. Chupa chups brownie toffee toffee cotton candy sesame snaps soufflé brownie chocolate. Tart jelly oat cake cookie. Pie dessert sugar plum gummies ice cream. Donut jelly sugar plum chupa chups. Cheesecake marzipan jujubes oat cake dessert pastry croissant macaroon.
         </p>
@@ -104,6 +107,7 @@
         <p>
           Danish chupa chups pastry macaroon sesame snaps gingerbread danish. Cotton candy chupa chups powder croissant candy gingerbread marshmallow halvah macaroon. Caramels caramels sugar plum powder pudding gummies lemon drops muffin. Ice cream marzipan gingerbread jujubes jelly powder soufflé pudding lollipop. Croissant pudding cake carrot cake bonbon sesame snaps gummi bears muffin croissant. Sweet roll chocolate cake toffee tiramisu gummies. Dragée cheesecake chocolate sesame snaps gummies powder caramels cupcake. Cake jelly-o cake chocolate. Marzipan gingerbread candy chocolate cake soufflé donut sugar plum cotton candy. Bear claw jelly muffin croissant gummies wafer gummies jelly-o. Jelly-o marzipan cotton candy croissant candy halvah fruitcake pastry. Icing pastry cake jelly pie. Halvah oat cake topping croissant soufflé dessert ice cream donut. Ice cream chocolate apple pie macaroon gummies caramels tart bear claw ice cream.
         </p>
+          </div>
       </section>
       <section id="two-end" class="end">
         <h3>Meatball turducken chicken doner bacon ground round rump</h3>
